--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="cv-icon"><i class="fas fa-file-download"></i></div>
         <h3>Télécharger mon CV</h3>
         <p>Découvrez mon parcours et mes compétences.</p>
-        <a href="assets/CV stage.pdf" class="btn-custom" download>
+        <a href="CV stage.pdf" class="btn-custom" download>
           <i class="fas fa-download"></i> Télécharger PDF
         </a>
       </div>
@@ -252,3 +252,4 @@
   </script>
 </body>
 </html>
+
